src/test/ui/privacy/privacy-ns2.stderr
error[E0423]: expected function, tuple struct or tuple variant, found trait `Bar`
  --> $DIR/privacy-ns2.rs:20:5
   |
LL |     Bar();
   |     ^^^ not a function, tuple struct or tuple variant
   |
help: consider importing this function instead
   |
LL | use foo2::Bar;
   |

error[E0423]: expected function, tuple struct or tuple variant, found trait `Bar`
  --> $DIR/privacy-ns2.rs:26:5
   |
LL |     pub struct Baz;
   |     --------------- similarly named unit struct `Baz` defined here
...
LL |     Bar();
   |     ^^^
   |
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: consider importing this function instead
   |
LL | use foo2::Bar;
   |

error[E0573]: expected type, found function `Bar`
  --> $DIR/privacy-ns2.rs:43:14
   |
LL |     let _x : Bar();
   |              ^^^^^ not a type
   |
help: use `=` if you meant to assign
   |
LL |     let _x = Bar();
   |            ^
help: consider importing this trait instead
   |
LL | use foo1::Bar;
   |

error[E0603]: trait `Bar` is private
  --> $DIR/privacy-ns2.rs:63:15
   |
LL |     use foo3::Bar;
   |               ^^^ private trait
   |
note: the trait `Bar` is defined here
  --> $DIR/privacy-ns2.rs:55:5
   |
LL |     trait Bar {
   |     ^^^^^^^^^

error[E0603]: trait `Bar` is private
  --> $DIR/privacy-ns2.rs:67:15
   |
LL |     use foo3::Bar;
   |               ^^^ private trait
   |
note: the trait `Bar` is defined here
  --> $DIR/privacy-ns2.rs:55:5
   |
LL |     trait Bar {
   |     ^^^^^^^^^

error[E0603]: trait `Bar` is private
  --> $DIR/privacy-ns2.rs:74:16
   |
LL |     use foo3::{Bar,Baz};
   |                ^^^ private trait
   |
note: the trait `Bar` is defined here
  --> $DIR/privacy-ns2.rs:55:5
   |
LL |     trait Bar {
   |     ^^^^^^^^^

error[E0107]: wrong number of const arguments: expected 0, found 1
  --> $DIR/privacy-ns2.rs:41:18
   |
LL |     let _x : Box<Bar>;
   |                  ^^^ unexpected const argument

error[E0107]: wrong number of type arguments: expected at least 1, found 0
  --> $DIR/privacy-ns2.rs:41:14
   |
LL |     let _x : Box<Bar>;
   |              ^^^^^^^^ expected at least 1 type argument

error[E0107]: wrong number of const arguments: expected 0, found 1
  --> $DIR/privacy-ns2.rs:49:17
   |
LL |     let _x: Box<Bar>;
   |                 ^^^ unexpected const argument

error[E0107]: wrong number of type arguments: expected at least 1, found 0
  --> $DIR/privacy-ns2.rs:49:13
   |
LL |     let _x: Box<Bar>;
   |             ^^^^^^^^ expected at least 1 type argument

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0107, E0423, E0573, E0603.
For more information about an error, try `rustc --explain E0107`.
